# hooq

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  todo.md
examples/: Cargo.toml  README.md  all.rs  all_info.rs  custom_method.rs  env_logger.rs  hooq.toml  skip.rs  tag.rs
examples/examples/: all_info.rs  anyhow.rs  bindings.rs  consume_question.rs  custom_method.rs  env_logger.rs  flavor.rs  hooq_meta.rs  index.rs  log.rs  macro.rs  override_method.rs  playground.rs  replace.rs  skip.rs  tag.rs  trait_use.rs  unwrap.rs
examples/examples/tutorial/: tutorial.rs
hooq/: Cargo.toml  README.md
hooq-helpers/: Cargo.toml
hooq-helpers/docs/: README.md
hooq-helpers/docs/ja/: README.md
hooq-helpers/src/: lib.rs
hooq-macros/: Cargo.toml
hooq-macros/docs/: README.md
hooq-macros/docs/ja/: README.md
hooq-macros/src/: lib.rs
hooq-macros/src/impls/: mod.rs
hooq-macros/src/impls/flavor/: flavor_path.rs  macro.rs  mod.rs
hooq-macros/src/impls/inert_attr/: context.rs  method.rs  mod.rs  parse.rs
hooq-macros/src/impls/method/: mod.rs
hooq-macros/src/impls/root_attr/: mod.rs  parse.rs
hooq-macros/src/impls/utils/: function_info.rs  get_attrs.rs  get_hooq_crate_name.rs  mod.rs  source_excerpt.rs  source_excerpt_macros.rs  unexpected_error_message.rs
hooq-macros/src/impls/walker/: hook_expr.rs  mod.rs  test.rs  walk_macro.rs
hooq-macros/tests/: mod.rs
hooq-macros/tests/special/: abs_path.rs  bindings.expanded.rs  bindings.rs  flavor_not_cargo_project.rs  fn_special.expanded.rs  fn_special.rs  hook_targets.expanded.rs  hooq_meta.expanded.rs  hooq_meta.rs  macro.expanded.rs  macro.rs  mod.rs  nested.expanded.rs  nested.rs  skip.expanded.rs  skip.rs  skip_detail.expanded.rs  skip_detail.rs  trait_use.expanded.rs  trait_use.rs
hooq-macros/tests/special/consume-question/: Cargo.toml
hooq-macros/tests/special/flavor/: empty.expanded.rs  empty.rs  hook.expanded.rs  hook.rs  mod.rs
hooq-macros/tests/special/flavor_not_cargo_project/: build_script.rs  hooq.toml  main.expanded.rs  main.rs
hooq-macros/tests/special/inert_attr_setting/: hook_targets.expanded.rs  hook_targets.rs  ignore_tail_expr_idents.expanded.rs  ignore_tail_expr_idents.rs  mod.rs  not_tail_expr_idents.expanded.rs  not_tail_expr_idents.rs  option.expanded.rs  option.rs  result_types.expanded.rs  result_types.rs  tail_expr_idents.expanded.rs  tail_expr_idents.rs  trait_use.expanded.rs  trait_use.rs
hooq-macros/tests/special/meta_var/: abs_path.expanded.rs  abs_path.rs  expr_str.expanded.rs  expr_str.rs  fn_info.expanded.rs  fn_info.rs  hooq_meta.expanded.rs  hooq_meta.rs  line.expanded.rs  line.rs  mod.rs  path.expanded.rs  path.rs  so_far.expanded.rs  so_far.rs  source.expanded.rs  source.rs
hooq-macros/tests/special/method_replace/: Cargo.toml  hooq.toml
hooq-macros/tests/special/source_excerpt_macros/: mod.rs
hooq-macros/tests/util_macros/: Cargo.toml
hooq-macros/tests/util_macros/src/: lib.rs
hooq-macros/tests/walker/expr/: array.expanded.rs  array.rs  assign.expanded.rs  assign.rs  async.expanded.rs  async.rs  await.expanded.rs  await.rs  binary.expanded.rs  binary.rs  block.expanded.rs  block.rs  break.expanded.rs  break.rs  call.expanded.rs  call.rs  cast.expanded.rs  cast.rs  closure.expanded.rs  closure.rs  const.expanded.rs  const.rs  field.expanded.rs  field.rs  for_loop.expanded.rs  for_loop.rs  group.expanded.rs  group.rs  if.expanded.rs  if.rs  index.expanded.rs  index.rs  let.expanded.rs  let.rs  loop.expanded.rs  loop.rs  macro.expanded.rs  macro.rs  match.expanded.rs  match.rs  (+23 more)
hooq-macros/tests/walker/item/: const.expanded.rs  const.rs  fn.expanded.rs  fn.rs  impl.expanded.rs  impl.rs  macro.expanded.rs  macro.rs  mod_.expanded.rs  mod_.rs  (+4 more)
hooq/docs/: README.md
hooq/docs/ja/: README.md
hooq/src/: lib.rs  source_excerpt_helpers.rs
mdbook-source-code/all_attr/: Cargo.toml
mdbook-source-code/all_attr/src/: main.expanded.rs  main.rs
mdbook-source-code/all_attr/tests/: test.rs
mdbook-source-code/flavor-anyhow/: Cargo.toml
mdbook-source-code/flavor-anyhow/src/: main.rs
mdbook-source-code/flavor-anyhow/tests/: test.rs
mdbook-source-code/flavor-default/: Cargo.toml
mdbook-source-code/flavor-default/src/: main.rs
mdbook-source-code/flavor-default/tests/: test.rs
mdbook-source-code/flavor-eyre/: Cargo.toml
mdbook-source-code/flavor-eyre/src/: main.rs
mdbook-source-code/flavor-eyre/tests/: test.rs
mdbook-source-code/flavor-log/: Cargo.toml
mdbook-source-code/flavor-log/src/: main.rs
mdbook-source-code/flavor-log/tests/: test.rs
mdbook-source-code/flavor-tracing/: Cargo.toml
mdbook-source-code/flavor-tracing/src/: main.rs
mdbook-source-code/flavor-tracing/tests/: test.rs
mdbook-source-code/index/: Cargo.toml
mdbook-source-code/index/src/: main.rs
mdbook-source-code/index/tests/: test.rs
mdbook-source-code/meta-vars-line/: Cargo.toml
mdbook-source-code/meta-vars-line/src/: main.expanded.rs  main.rs
mdbook-source-code/recipe-color-eyre/: Cargo.toml  hooq.toml
mdbook-source-code/recipe-color-eyre/src/: main.rs
mdbook-source-code/recipe-color-eyre/tests/: test.rs
mdbook-source-code/recipe-match/: Cargo.toml  hooq.toml
mdbook-source-code/recipe-match/src/: main.expanded.rs  main.rs
mdbook-source-code/recipe-unwrap/: Cargo.toml  hooq.toml
mdbook-source-code/recipe-unwrap/src/: main.expanded.rs  main.rs  main.unwrap.expanded.rs
mdbook-source-code/recipe-unwrap/tests/: test.rs
mdbook-source-code/tutorial-1/: Cargo.toml
mdbook-source-code/tutorial-1/src/: main.rs
mdbook-source-code/tutorial-1/tests/: test.rs
mdbook-source-code/tutorial-3/: Cargo.toml  test.toml
mdbook-source-code/tutorial-3/src/: main.rs
mdbook-source-code/tutorial-3/tests/: test.rs
mdbook-source-code/tutorial-4-with-anyhow/: Cargo.toml
mdbook-source-code/tutorial-4-with-anyhow-2/: Cargo.toml
mdbook-source-code/tutorial-4-with-anyhow-2/src/: main.rs
mdbook-source-code/tutorial-4-with-anyhow-2/tests/: test.rs
mdbook-source-code/tutorial-4-with-anyhow/src/: main.rs
mdbook-source-code/tutorial-4-with-anyhow/tests/: test.rs
(+466 files in other folders)
