[package]
name = "hooq"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[lib]
proc-macro = true

[features]
err-only = []

[dependencies]
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }

[dev-dependencies]
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.3"
log = "0.4.27"
macrotest = "1.2.0"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
util_macros = { path = "tests/util_macros" }
