[workspace]
resolver = "2"
members = [
    "examples",
    "hooq",
    "hooq-helpers",
    "hooq-macros",
    "hooq-macros/tests/special/flavor/*",
    "hooq-macros/tests/special/other-preset-flavors/*",
    "test-helpers",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.88.0"
edition = "2024"
