[package]
name = "hooq-examples"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
hooq = { path = "../hooq", features = ["full"] }
log = "0.4.27"
toml = "0.9.8"

[[example]]
name = "index_without_hooq"
path = "examples/without_hooq/index.rs"

[[example]]
name = "eye_catch"
path = "examples/etc/eye_catch.rs"

[[example]]
name = "tutorial"
path = "examples/tutorial/tutorial.rs"

[[example]]
name = "tutorial_with_anyhow"
path = "examples/tutorial/tutorial_with_anyhow.rs"
