[package]
name = "hooq-examples"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dev-dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
hooq = { path = "../hooq", features = ["full"] }
log = "0.4.29"
toml = "1.0.1"
