[package]
name = "hooq-examples"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dev-dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
hooq = { path = "../hooq", features = ["full"] }
log = "0.4.29"
toml = "1.1.2"
