[package]
name = "hooq-macros"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["*.expanded.rs", "*.snap"]
readme = "docs/README.md"
documentation = { workspace = true }

[lib]
proc-macro = true

[features]
default = ["anyhow", "log", "tracing", "eyre"]
log = []
anyhow = []
consume-question = []
tracing = []
eyre = []

[dependencies]
proc-macro-crate = "3.4.0"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.44"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.114", features = ["full", "extra-traits", "fold"] }
toml = "0.9.11"

[dev-dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
hooq = { path = "../hooq" }
insta = "1.46.3"
macrotest = "1.2.0"
serde_json = "1.0.149"
test-helpers = { path = "../test-helpers" }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
util_macros = { path = "tests/util_macros" }
