[package]
name = "hooq-macros"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["*.expanded.rs", "*.snap"]
readme = "docs/README.md"
documentation = { workspace = true }

[lib]
proc-macro = true

[features]
default = ["anyhow", "log", "tracing", "eyre"]
log = []
anyhow = []
consume-question = []
tracing = []
eyre = []

[dependencies]
proc-macro-crate = "3.5.0"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.117", features = ["full", "extra-traits", "fold"] }
toml = "1.1.2"

[dev-dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
hooq = { path = "../hooq" }
insta = "1.47.2"
macrotest = "1.2.1"
serde_json = "1.0.149"
test-helpers = { path = "../test-helpers" }
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
util_macros = { path = "tests/util_macros" }
