
[package]
name = "hooq"
readme = "docs/README.md"

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.description]
workspace = true

[package.edition]
workspace = true

[package.keywords]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[features]
anyhow = ["hooq-macros/anyhow"]
consume-question = ["hooq-macros/consume-question"]
default = ["anyhow", "log"]
full = ["anyhow", "log", "consume-question"]
log = ["hooq-macros/log"]
[dependencies.hooq-helpers]
path = "../hooq-helpers"
version = "0.3.0"

[dependencies.hooq-macros]
default-features = false
path = "../hooq-macros"
version = "0.3.0"

[dev-dependencies]
toml = "0.9.8"
