[package]
name = "flavor-eyre"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
eyre = "0.6.12"
hooq = { path = "../../hooq", features = ["eyre"] }

[dev-dependencies]
insta = "1.45.0"
