[package]
name = "flavor-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
env_logger = "0.11.8"
hooq = { path = "../../hooq" }
log = "0.4.29"

[dev-dependencies]
insta = "1.46.3"
