[package]
name = "flavor-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing-subscriber = "0.3.22"
tracing = "0.1.43"
hooq = { path = "../../hooq", features = ["tracing"] }

[dev-dependencies]
insta = "1.44.0"
