[package]
name = "flavor-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hooq = { path = "../../hooq", features = ["tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
insta = "1.46.1"
