[package]
name = "recipe-color-eyre"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
color-eyre = "0.6.5"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-error = "0.2.1"
hooq = { path = "../../hooq" } # Please rewrite `hooq = "*"`

[features]
default = ["capture-spantrace"]
capture-spantrace = []

[dev-dependencies]
insta = "1.44.0"
regex = "1.12.2"
strip-ansi-escapes = "0.2.1"
