[package]
name = "recipe-match"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hooq = { path = "../../hooq", features = ["consume-question"] }

[dev-dependencies]
test-helpers = { path = "../../test-helpers" }
