[package]
name = "recipe-unwrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
unwrap = []

[dependencies]
hooq = { path = "../../hooq", features = ["consume-question"] }

[dev-dependencies]
test-helpers = { path = "../../test-helpers" }
