[package]
name = "tutorial-1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hooq = { path = "../../hooq" }
toml = "0.9.10"

[dev-dependencies]
insta = "1.46.0"
