[package]
name = "tutorial-4-with-anyhow-2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.100"
hooq = { path = "../../hooq" }
toml = "0.9.11"

[dev-dependencies]
insta = "1.46.3"
