[package]
name = "hooq-anyhow"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0.99"
hooq = { path = "../../../../../hooq", features = ["anyhow"] }
macrotest = "1.2.0"
test-helpers = { path = "../../../../../test-helpers" }
