[package]
name = "hooq-anyhow"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = "1.0.100"
hooq = { path = "../../../../../hooq", features = ["anyhow"] }
macrotest = "1.2.0"
test-helpers = { path = "../../../../../test-helpers" }
