[package]
name = "hooq-eyre"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
eyre = "0.6.12"
hooq = { path = "../../../../../hooq", features = ["eyre"] }
macrotest = "1.2.0"
test-helpers = { path = "../../../../../test-helpers" }
