[package]
name = "hooq-log"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
env_logger = "0.11.8"
hooq = { path = "../../../../../hooq" }
log = "0.4.29"
macrotest = "1.2.0"
test-helpers = { path = "../../../../../test-helpers" }
